<resources>
    <string name="app_name">WatchTower</string>

    <string name="label_update">Update</string>
    <string name="label_register">Register</string>
    <string name="label_attachments">Attachments</string>
    <string name="label_add_attachment">Add attachment</string>
    <string name="label_beacon_detail">Beacon detail</string>

    <!-- Options Menu -->

    <string name="action_medium">View Medium Article</string>
    <string name="action_github">View on GitHub</string>
    <string name="action_done">done</string>
    <string name="action_edit">edit</string>
    <string name="action_add_attachment">Add Attachment</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_all">Delete all</string>

    <!-- Detail Activity -->

    <string name="fragment_title_properties">Properties</string>
    <string name="fragment_title_alerts">Diagnostics</string>

    <!-- Beacon Card -->

    <string name="text_view">View</string>
    <string name="text_update">Update</string>
    <string name="text_attachments">Attachments</string>

    <!-- Attachment Card -->

    <string name="text_delete">Delete</string>

    <!-- Register / Updates / View Beacon -->

    <string name="title_beacon_name">Beacon name</string>
    <string name="title_advertised_id">Advertised ID</string>
    <string name="title_description">Description</string>
    <string name="title_type">Type</string>
    <string name="title_status">Status</string>
    <string name="title_stability">Stability</string>
    <string name="title_location">Location</string>
    <string name="title_places_id">Google Places ID</string>

    <string name="hint_beacon_name">Beacon name</string>
    <string name="hint_advertised_id">Advertised Id</string>
    <string name="hint_description">Description</string>
    <string name="hint_type">Type</string>
    <string name="hint_status">Status</string>
    <string name="hint_latitude">Latitude</string>
    <string name="hint_longitude">Longitude</string>
    <string name="hint_places_id">Google Places ID</string>


    <!-- Alerts -->

    <string name="text_title_estimated_battery">Est. Low Battery</string>
    <string name="text_title_alerts">Alerts</string>
    <string name="text_battery_unknown">Unknown</string>

    <!-- Attachments -->

    <string name="hint_data">Data</string>

    <!-- Error Messages -->

    <string name="text_no_beacons">Sorry, no beacons to display</string>
    <string name="text_no_attachments">Sorry, no attachments to display</string>
    <string name="text_no_alerts">Sorry, no alerts to display</string>

    <string name="error_message_play_services">Sorry, you need Google Play Services to use this app :(</string>
    <string name="error_message_advertised_id">The Advertised ID cannot be blank</string>
    <string name="error_message_status">The beacon status cannot be blank</string>
    <string name="error_message_attachment_data">The attachment data cannot be blank</string>
    <string name="error_advertised_id">Advertised Id is required</string>
    <string name="error_message_double_value">Must be a valid Double</string>

    <!-- Dialogs -->

    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_delete">Delete</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_action_exit">Exit</string>
    <string name="dialog_action_authorise">Authorise</string>

    <string name="dialog_hint_namespaced_type">Namespaced Type</string>
    <string name="dialog_title_delete">Delete</string>
    <string name="dialog_message_delete">Please enter a namespaced type</string>

    <string name="dialog_error_title">Oops</string>
    <string name="dialog_general_error_Message">There was an error making the request</string>
    <string name="dialog_error_unauthorised_response">There was an error authorising the request, please connect again</string>
    <string name="dialog_error_account_chooser">Sorry, but you can\'t use this app without connecting an account!</string>

    <string name="dialog_error_blank_data">Text data cannot be blank!</string>
    <string name="dialog_error_invalid_data">Text data cannot contain spaces!</string>
    <string name="dialog_error_no_attachments">Sorry, there are no attachments to delete!</string>
    <string name="dialog_error_no_connection">Sorry, you need a connection to do that!</string>

    <string name="progress_dialog_saving_beacon">Saving beacon&#8230;</string>
    <string name="progress_dialog_retrieving_namespaces">Retrieving namespaces&#8230;</string>
    <string name="progress_dialog_adding_attachment">Adding attachment&#8230;</string>
    <string name="progress_dialog_deleting_attachment">Deleting attachment&#8230;</string>
    <string name="progress_dialog_deleting_all_attachments">Deleting all attachments&#8230;</string>
    <string name="progress_dialog_deleting_type_attachments">Deleting %s attachments&#8230;</string>

    <!-- Add Attachments Activity -->

    <string name="text_title_namespace">Namespace</string>
    <string name="text_title_data">Data</string>

    <string-array name="detail_fragment_titles">
        <item>@string/fragment_title_properties</item>
        <item>@string/fragment_title_alerts</item>
    </string-array>

    <!-- Spinner Value Arrays -->

    <string-array name="statuses">
        <item>Select status</item>
        <item>Active</item>
        <item>Inactive</item>
        <item>Decommissioned</item>
    </string-array>

    <string-array name="stabilities">
        <item>Select stability</item>
        <item>Stable</item>
        <item>Portable</item>
        <item>Mobile</item>
        <item>Roving</item>
    </string-array>

    <string-array name="types">
        <item>Select type</item>
        <item>Eddystone</item>
        <item>iBeacon</item>
        <item>AltBeacon</item>
    </string-array>

</resources>
