 <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        style="@style/TitleTextStyle"
        android:id="@+id/text_battery_title"
        android:layout_alignParentTop="true"
        android:layout_margin="16dp"
        android:text="@string/text_title_estimated_battery"/>

    <TextView
        android:id="@+id/text_battery_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/text_battery_title"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/text_body"/>

     <TextView
         style="@style/TitleTextStyle"
         android:id="@+id/text_title_alerts"
         android:layout_below="@id/text_battery_title"
         android:layout_margin="16dp"
         android:text="@string/text_title_alerts"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_alerts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_title_alerts"
        android:clipToPadding="false"
        android:padding="16dp"/>

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:id="@id/progress_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    <TextView
        style="@style/EmptyListTextStyle"
        android:id="@+id/text_no_alerts"
        android:layout_below="@id/text_title_alerts"
        android:layout_marginTop="24dp"
        android:text="@string/text_no_alerts"/>

 </RelativeLayout>